--- a/src/app/Home.module.css
+++ b/src/app/Home.module.css
@@ -72,12 +72,13 @@
 }
 
 .navButton {
-  background-color: #2563eb;
+  background-color: #ff69b4;
   color: white;
   padding: 0.75rem 1.5rem;
   border: none;
   border-radius: 0.5rem;
-  font-weight: 500;
+  /*font-weight: 500;*/
+  font-weight: bold;
   cursor: pointer;
   transition: background-color 0.2s ease;
 }
