--- a/src/app/Home.module.css
+++ b/src/app/Home.module.css
@@ -92,6 +92,15 @@
   transition: background-color 0.2s ease;
 }
 
+.navbar {
+  width: 100%;
+  display: flex;
+  justify-content: flex-end;
+  gap: 1rem;
+  margin-bottom: 2rem;
+}
+
+
 .navButton:hover {
   background-color: #1d4ed8;
 }
